style: Update typography and layout for improved readability and aesthetics

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Syne:wght@400..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <meta name="description" content="Mauro Montane's Portfolio Website">
     <meta name="keywords" content="Mauro Montane, Portfolio, Web Developer, Front-End Developer">
     <meta name="google-site-verification" content="635eNbkJqYPdUV4T9mgXaZ6Q0rM45FZ7AAWcem0ci_A">  <!-- old one -->
@@ -59,17 +59,12 @@
       <main id="about">
         <h1>About:</h1>
         <p class="about">
-          Hey there, my name is Mauro. I'm a 19 years old student web developer living in Italy. 
-          Since I was a child, I've always found programming and computers fascinating. Now, I'm 
-          on a journey to become a Front-End web developer. I enjoy creating different kinds of 
-          projects because, for me, that's the best way to learn new things. I'm currently studying 
-          Computer Science in high school and pursuing a Front-End Engineer and iOS Developer career path on Codecademy. 
-          I'm learning a bit of UI/UX design to enhance my ability to create well-designed websites, 
-          even though it's not my main focus. Programming is not just work for me, but also a passion. 
-          I often spend my free time working on personal projects to enhance my skills and explore 
-          new technologies. You can find my ongoing and completed projects on my 
-          <a href="https://github.com/mauromltn">GitHub Page</a>.
-          Hope you like my work!
+          Hey, I’m Mauro—a 19-year-old developer from Italy, specializing in Front-End and iOS Development. 
+          I bring ideas to life through code and strengthen my skills through projects. I’m currently studying 
+          Computer Science in high school while learning on Codecademy.
+        </p>
+        <p>
+          For more, check out my <a href="https://github.com/mauromltn">GitHub Page</a>.
         </p>
         
         <h1 id="projects">Projects:</h1>
@@ -80,7 +75,7 @@
               d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" 
               clip-rule="evenodd"></path>
             </svg>    
-            <h2>Portfolio Website</h2>
+            <p>Portfolio Website</p>
           </div>
 
           <div class="project big-cursor" onclick="window.open('https://github.com/mauromltn/Travel-Agency', '_blank')">
@@ -89,7 +84,7 @@
               d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" 
               clip-rule="evenodd"></path>
             </svg>    
-            <h2>Travel Agency</h2>
+            <p>Travel Agency</p>
           </div>
           
           <div class="project big-cursor" onclick="window.open('https://github.com/mauromltn/SignUp-Page', '_blank')">
@@ -98,7 +93,7 @@
               d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" 
               clip-rule="evenodd"></path>
             </svg>    
-            <h2>Sign-Up Page</h2>
+            <p>Sign-Up Page</p>
           </div>
 
           <div class="project big-cursor" onclick="window.open('https://github.com/mauromltn/ToDoList', '_blank')">
@@ -107,7 +102,7 @@
               d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" 
               clip-rule="evenodd"></path>
             </svg>    
-            <h2>To-Do List</h2>
+            <p>To-Do List</p>
           </div>
 
           <div class="project big-cursor" onclick="window.open('https://github.com/mauromltn/progressive-blur', '_blank')">
@@ -116,7 +111,7 @@
               d="M5.22 14.78a.75.75 0 001.06 0l7.22-7.22v5.69a.75.75 0 001.5 0v-7.5a.75.75 0 00-.75-.75h-7.5a.75.75 0 000 1.5h5.69l-7.22 7.22a.75.75 0 000 1.06z" 
               clip-rule="evenodd"></path>
             </svg>    
-            <h2>Progressive Blur</h2>
+            <p>Progressive Blur</p>
           </div>
         </div>
 
