style: Update font family and improve footer and general layout

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Geist:wght@100..900&display=swap" rel="stylesheet">
     <meta name="description" content="Mauro Montane's Portfolio Website">
     <meta name="keywords" content="Mauro Montane, Portfolio, Web Developer, Front-End Developer">
     <meta name="google-site-verification" content="635eNbkJqYPdUV4T9mgXaZ6Q0rM45FZ7AAWcem0ci_A">  <!-- old one -->
@@ -32,8 +32,8 @@
         <ul>
           <li><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#footer">Connect</a></li>
+          <li><a href="#project">Projects</a></li>
+          <li><a href="#connect">Connect</a></li>
         </ul>
       </nav>
     </header>
@@ -59,7 +59,7 @@
       <main id="about">
         <h1>About:</h1>
         <p class="about">
-          Hey, I’m Mauro—a 19-year-old developer from Italy, specializing in Front-End and iOS Development. 
+          Hey, I’m Mauro a 19 year old developer from Italy, specializing in Front-End and iOS Development. 
           I bring ideas to life through code and strengthen my skills through projects. I’m currently studying 
           Computer Science in high school while learning on Codecademy.
         </p>
@@ -67,7 +67,7 @@
           For more, check out my <a href="https://github.com/mauromltn">GitHub Page</a>.
         </p>
         
-        <h1 id="projects">Projects:</h1>
+        <h1 id="project">Projects:</h1>
         <div class="projects">
           <div class="project big-cursor" onclick="window.open('https://github.com/mauromltn/portfolio-website', '_blank')">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="arrow-up">
@@ -125,7 +125,7 @@
           <p>Figma</p>
         </div>
 
-        <h1 id="footer">Connect:</h1>
+        <h1 id="connect">Connect:</h1>
         <section>
           <h2>Reach Out</h2>
           <p>
@@ -152,6 +152,14 @@
         </div>
         <div class="footer-links">
           <ul>
+            <span>Navigation</span>
+            <li><a href="#">home</a></li>
+            <li><a href="#about">about</a></li>
+            <li><a href="#project">projects</a></li>
+            <li><a href="#connect">connect</a></li>
+          </ul>
+          <ul>
+            <span>Social</span>
             <li><a href="mailto:dev.montane@gmail.com">email</a></li>
             <li><a href="https://www.linkedin.com/in/mauro-montane/">linkedin</a></li>
             <li><a href="https://github.com/mauromltn">github</a></li>
@@ -159,7 +167,6 @@
           </ul>
         </div>
       </div>
-        <span class="name">MAURO</span>
     </footer>
     
     <div class="cursor"></div>
