style: Improve footer layout and accessibility with updated labels and colors

--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
         </div>
         <div class="footer-links">
           <ul>
-            <span>Navigation</span>
+            <label>Navigation</label>
             <li><a href="#">home</a></li>
             <li><a href="#about">about</a></li>
             <li><a href="#project">projects</a></li>
             <li><a href="#connect">connect</a></li>
           </ul>
           <ul>
-            <span>Social</span>
+            <label>Social</label>
             <li><a href="mailto:dev.montane@gmail.com">email</a></li>
             <li><a href="https://www.linkedin.com/in/mauro-montane/">linkedin</a></li>
             <li><a href="https://github.com/mauromltn">github</a></li>
